Fixed errors with spacing.

--- a/mod1_assignment/CSS/styles.css
+++ b/mod1_assignment/CSS/styles.css
@@ -27,7 +27,7 @@ section {
   background-color: #A1D490;
   padding: 15px;
   border: 1px solid black;
-/*  margin: 5px;*/
+  margin: 1%;
 }
 /* Simple Responsive Framework. */
 .row {
@@ -65,17 +65,7 @@ div.title{
   .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
   }
-/*  #chicken {
-    width: 33%;
-  }
 
-  #beef {
-    width: 33%;
-  }
-
-  #sushi {
-    widows: 33%;
-  }*/
   .col-lg-1 {
     width: 8.33%;
   }
@@ -86,7 +76,7 @@ div.title{
     width: 25%;
   }
   .col-lg-4 {
-    width: 33.33%;
+    width: 30.33%;
   }
   .col-lg-5 {
     width: 41.66%;
@@ -110,7 +100,7 @@ div.title{
     width: 91.66%;
   }
   .col-lg-12 {
-    width: 100%;
+    width: 98%;
   }
 }
 
@@ -120,18 +110,6 @@ div.title{
   .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
   }
-
-/*  #chicken {
-    width: 50%;
-  }
-
-  #beef {
-    width: 50%;
-  }
-
-  #sushi {
-    widows: 100%;
-  }*/
 
   .col-md-1 {
     width: 8.33%;
@@ -149,7 +127,7 @@ div.title{
     width: 41.66%;
   }
   .col-md-6 {
-    width: 50%;
+    width: 48%;
   }
   .col-md-7 {
     width: 58.33%;
@@ -167,7 +145,7 @@ div.title{
     width: 91.66%;
   }
   .col-md-12 {
-    width: 100%;
+    width: 98%;
   }
 }
 
@@ -206,7 +184,7 @@ div.title{
     width: 41.66%;
   }
   .col-sm-6 {
-    width: 50%;
+    width: 48%;
   }
   .col-sm-7 {
     width: 58.33%;
@@ -224,7 +202,7 @@ div.title{
     width: 91.66%;
   }
   .col-sm-12 {
-    width: 100%;
+    width: 98%;
   }
 
 }
